// @project        The CERN Tape Archive (CTA)
// @brief          CTA-EOS API definition
// @copyright      Copyright 2017 CERN
// @license        This program is free software: you can redistribute it and/or modify
//                 it under the terms of the GNU General Public License as published by
//                 the Free Software Foundation, either version 3 of the License, or
//                 (at your option) any later version.
//
//                 This program is distributed in the hope that it will be useful,
//                 but WITHOUT ANY WARRANTY; without even the implied warranty of
//                 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
//                 GNU General Public License for more details.
//
//                 You should have received a copy of the GNU General Public License
//                 along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax  = "proto3";
package cta.eos;

message Clock {
  uint64 sec                 = 1;       //< seconds of a clock
  uint64 nsec                = 2;       //< nanoseconds of a clock
}

message Checksum {
  string name                = 1;       //< checksum name
  string value               = 2;       //< checksum value
}

message Service {
  string name                = 1;       //< name of the service
  string url                 = 2;       //< access url of the service
}

message Id {
  uint64 uid                 = 1;       //< user identity number
  string username            = 2;       //< user name 
  uint64 gid                 = 3;       //< group identity number
  string groupname           = 4;       //< group name
}

message Security {
  string host                = 1;       //< client host 
  string app                 = 2;       //< app string
  string name                = 3;       //< security name
  string prot                = 4;       //< security protocol
  string grps                = 5;       //< security grps
}



//
// Messages sent from EOS to CTA Frontend
//

message Workflow {
  enum EventType {
    NONE    = 0;
    OPENR   = 1;
    OPENW   = 2;
    CLOSER  = 3;
    CLOSEW  = 4;
    DELETE  = 5;
    PREPARE = 6;
  }
  EventType event            = 1;       //< event
  string queue               = 2;       //< queue
  string wfname              = 3;       //< workflow
  string vpath               = 4;       //< vpath
  Service instance           = 5;       //< instance information
  uint64 timestamp           = 6;       //< event timestamp
}

message Client {
  Id user                    = 1;       //< acting client
  Security sec               = 2;       //< client security information
}

message Transport {
  string url                 = 1;       //< transport URL
}

message Metadata {
  uint64 fid                 = 1;       //< file/container id
  uint64 pid                 = 2;       //< parent id
  Clock ctime                = 3;       //< change time
  Clock mtime                = 4;       //< modification time
  Clock btime                = 5;       //< birth time
  Clock ttime                = 6;       //< tree modification time
  Id owner                   = 7;       //< ownership
  uint64 size                = 8;       //< size 
  Checksum cks               = 9;       //< checksum information
  sint32 mode                = 10;      //< mode
  string lpath               = 11;      //< logical path
  map<string, string> xattr  = 12;      //< xattribute map
};

message Notification {
  Workflow wf                = 1;       //< workflow
  Client cli                 = 2;       //< client information
  Transport transport        = 3;       //< transport
  Metadata file              = 4;       //< file meta data
  Metadata directory         = 5;       //< directory meta data
}



//
// Messages sent from the Tape Server to EOS
//

//message Tapereplica {
//  enum Status { NONE = 0; OFFTAPE = 1; ONTAPE = 2; ONTAPESAVE = 3; }
//  uint64 fid                 = 1;       //< file id
//  Status status              = 2;       //< status for file id
//  uint64 size                = 3;       //< File size as recorded on tape, for cross-check
//  Checksum cks               = 4;       //< File checksum as computer while writing to tape
//}
